# MAVISIM

./: .gitignore  .gitmodules  README.md  download_data.sh  input_parameters.py  input_parameters_v1_1.py  install_dependencies.sh  mavisim.ipynb  mavisimim_avatar.py  mavisimv1_1.ipynb  mavissimim.ipynb  mkdocs.yml  mkgendocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  run_mavisim.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.md  install.md  runningmavisim.md  runningmavisimshort.md
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo
docs/sources/: astromsim.md  generate_image.md  source.md  util.md
example/: input_parameters.py  mavisim.ipynb  ngc3201_mavisim_input0year_imbh_4000stars2_radecFixedFlux  ngc3201_mavissimim_input10year_imbh_4000stars2_radecFixedFlux
mavisim/: AOGaussGrid.py  BilinearInterpolation.py  InputCoo.py  SeeingGrid.py  Source.py  __init__.py  __main__.py  addconstantskypixels.py  addnoise.py  astromsim.py  ccd.yaml  findclosestvalue.py  gausstiptilt.py  generate_image.py  input_parameters.py  makestaticdistortmap.py  maketiptiltmap.py  noise.py  source.py  trimimage.py  util.py  wrapper_for_pyxel.py
site/: 404.html  index.html  index.rst  search.html  sitemap.xml
site/_build/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
site/install/: index.html
site/runningmavisim/: index.html
site/runningmavisimshort/: index.html
site/search/: search_index.json
src/: Seeing_Weights_Aug2020  Source.py  addconstantskypixels.py  addnoise.py  input_parameters.py  makestaticdistortmap.py  trimimage.py
src/TTJitterMaps/: TT_jitter_mavis_astrad10_10_10_angles0_120_240_mag15.0_15.0_15.0_121dirs_sr80.0_80.0_80.0_at1650nm.fits
src/e2epsfs/: psf.py
src/mavisim/: BilinearInterpolation.py  InputCoo.py  Source.py  addconstantskypixels.py  gauss.py  generate_image.py  input_parameters.py  makestaticdistortmap.py  rampdown.py  setup.py
src/mavisim/TTJitterMaps/: TT_jitter_mavis_astrad30_40_10_angles330_90_150_mag16.0_18.0_18.0_121dirs_sr55.0_35.0_80.0_at1650nm.fits
src/mavisim1_1/: AOGaussGrid.py  InputCoo.py  SeeingGrid.py  Source.py  StaticDistortTransmissive  addconstantsky.py  addconstantskypixels.py  addnoise.py  findclosestvalue.py  findweights.py  generate_image.py  input_parameters.py  makestaticdistortmap.py  maketiptiltmap.py  rampup.py
src/mavisim1_1/TTJitterMaps/: TT_jitter_mavis_astrad40_40_40_angles0_120_240_mag18.0_18.0_18.0_121dirs_sr35.0_35.0_35.0_at1650nm.fits
tests/: test_astromcalibsim.py  test_cat  test_imgen.py  test_parameters.py
