[metadata]
name = mavisim
version = 1.1.12
author = Stephanie Monty
author_email = stephanie.monty@anu.edu.au
description = Tool for simulating MAVIS images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smonty93/mavisim
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
	numpy
	scipy
	astropy
	tqdm
	jupyter
	poppy
	pyxel
include_package_data = True

[options.extras_require]
testing = 
	pytest>=6.0
	pytest-cov>=2.0
	mypy>0.981
	flake8>=3.9
	tox>=3.24

[options.package_data]
mavisim = py.typed

[flake8]
max-line-length=160