[metadata]
name = mavisim
version = 1.1.17
author = Stephanie Monty
author_email = stephanie.monty@anu.edu.au
description = Tool for simulating MAVIS images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smonty93/mavisim
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
	numpy
	scipy
	astropy
	tqdm>=4.66.4
	jupyter
	poppy>=1.1.0
	pyxel-sim
include_package_data = True

[options.extras_require]
testing = 
	pytest
	pytest-cov
	mypy
	flake8
	tox

[options.package_data]
mavisim = py.typed

[flake8]
max-line-length=160
